fix menu scrollbar on windows

--- a/app.scss
+++ b/app.scss
@@ -29,7 +29,7 @@ a { text-decoration: none; color: $dark; }
 .menu {
   z-index: 10; opacity: 0; overflow-y: scroll; -webkit-overflow-scrolling: touch;
   position: absolute; top: 0; left: 0;
-  width: $gap*8+30; padding: ($gap - $base*$ratio) 30px ($gap - $base*$ratio) 0;
+  width: $gap*8+30; padding: ($gap - $base*$ratio) 0;
   background: $dark;
   color: $light;
   -webkit-transform: translate3d(-50%, 0, 0);
@@ -46,6 +46,7 @@ a { text-decoration: none; color: $dark; }
   }
   hr { display: block; margin: -1px $gap 0; border: 0 solid lighten($dark, 10%); border-bottom-width: 1px; }
 }
+.menu-wrapper { width: $gap*8; }
 .narrative { font-style: italic; }
 .menu-feeds {
   margin: $base*$ratio 0; padding: 0 $gap*4/5;
